# play-bazel-js-ts-node-jest

./: BUILD.bazel  README.md  WORKSPACE.bazel  jest.config.js  package.json  tsconfig.json
src/: index.html  index.test.js  index.ts
