package(default_visibility = ["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//http-server:index.bzl", "http_server")
load(":jest.bzl", "jest_test")

ts_project(
    name = "ts_transpile",
    srcs = ["//:src/index.ts"],
    deps = [],
)

http_server(
    name = "server",
    data = [
        "//:src/index.html",
        "//:src/index.js",
    ],
    args = ["."],
)

jest_test(
    name = "test",
    srcs = [
        "//:src/index.js",
        "//:src/index.test.js",
    ],
    jest_config = ":jest.config.js",
    tags = [],
    deps = [
        ':server'
    ]
)